--- a/pages/monitoreoOrden.html
+++ b/pages/monitoreoOrden.html
@@ -38,7 +38,7 @@
                 Productos
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="nav-link" href="ingresoProductos.html">Agregar</a>
+                <a class="nav-link" href="AgregarProductos.html">Agregar</a>
                 <a class="nav-link" href="mostrarProductos.html">Mostrar productos</a>
 
               </div>
@@ -46,7 +46,7 @@
 
 
             <li class="nav-item">
-              <b> <a class="nav-link" href="ordenCompra.html">Crear orden</a></b>
+              <b> <a class="nav-link" href="ordenVenta.html">Crear orden</a></b>
             </li>
             <li class="nav-item">
               <b> <a class="nav-link" href="monitoreoOrden.html">Verificar orden</a></b>
@@ -67,7 +67,7 @@
       <br>
       <div class="monOC">
         <b>
-          <a>Monitoreo Orden de Compra</a>
+          <a>MONITOREO DE ORDEN DE VENTA</a>
         </b>
       </div>
 
