--- a/pages/Existencias.html
+++ b/pages/Existencias.html
@@ -42,7 +42,7 @@
                 Productos
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="nav-link" href="ingresoProductos.html">Agregar</a>
+                <a class="nav-link" href="AgregarProductos.html">Agregar</a>
                 <a class="nav-link" href="mostrarProductos.html">Mostrar productos</a>
 
               </div>
@@ -50,7 +50,7 @@
 
 
             <li class="nav-item">
-              <b> <a class="nav-link" href="ordenCompra.html">Crear orden</a></b>
+              <b> <a class="nav-link" href="ordenVenta.html">Crear orden</a></b>
             </li>
             <li class="nav-item">
               <b> <a class="nav-link" href="monitoreoOrden.html">Verificar orden</a></b>
