--- a/pages/ordenVenta.html
+++ b/pages/ordenVenta.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Orden de Compra</title>
+  <title>Orden de venta</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -51,14 +51,14 @@
                 Productos
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="nav-link" href="ingresoProductos.html">Agregar</a>
+                <a class="nav-link" href="AgregarProductos.html">Agregar</a>
                 <a class="nav-link" href="mostrarProductos.html">Mostrar productos</a>
 
               </div>
             </li>
 
             <li class="nav-item">
-              <b> <a class="nav-link" href="ordenCompra.html">Crear orden</a></b>
+              <b> <a class="nav-link" href="ordenVenta.html">Crear orden</a></b>
             </li>
             <li class="nav-item">
               <b> <a class="nav-link" href="monitoreoOrden.html">Verificar orden</a></b>
@@ -79,7 +79,7 @@
       <br>
       <div class="monOC">
         <b>
-          <a>Orden de Compra</a>
+          <a>ORDEN DE VENTA</a>
         </b>
       </div>
 
